mobile and spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,11 @@ li{
 
 .section {
     padding: 80px 0;
+
+}
+
+.section.bg-gradient{
+    padding:  40px 0;
 }
 
 .section-title {
@@ -183,6 +188,7 @@ li{
 }
 
 @media (min-width:992px) {
+
     .text-container {
         margin: 3rem;
         padding: 0 5rem;
@@ -191,6 +197,17 @@ li{
     img.subsection{
         margin-left: 50px;
     }
+}
+
+@media (max-width: 992px) {
+    .hero.section{
+        padding-top: 40px;
+    }
+
+    img.hero{
+        padding-bottom:  20px;
+    }
+
 }
 
 
@@ -483,9 +500,16 @@ header {
     box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.07);
 }
 
+
+
+@media (min-width:992px) {
+    .testimonials-single {
+        max-width: 80%;
+    }
+}
+
 .testimonials-single {
     text-align: center;
-    max-width: 80%;
     margin: 40px auto;
     padding:  0 40px 20px 40px;
 }
